# batch_req

./: Cargo.toml  README.md  shadow_uid_with_money.csv  test_uid.csv
src/: main.rs
