[package]
name = "batch_req"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"]}
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false } # HTTP 客户端
anyhow = "1" # 错误处理
futures = "0.3.17"
